// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildConfirmEmail > matches snapshot 1`] = `
{
  "from": "Big G's Finder <noreply@biggfinder.jelinson.com>",
  "html": "<!DOCTYPE html>
<html>
<body style="font-family:sans-serif;margin:0;padding:0;background:#f4f4f4;color:#3D2817">
  <div style="max-width:600px;margin:40px auto;padding:20px;background:#ffffff;border-radius:8px">
  <h2>🍦 Confirm your subscription</h2>
  <p>You asked to be notified when <strong>Big G&#39;s Cookies &amp; Dream</strong> is available at Sweet Cow.</p>
  <p style="margin:30px 0">
    <a href="https://biggfinder.jelinson.com/api/subscribe?confirm=test-token-123"
       style="background:#FF6B9D;color:white;padding:14px 28px;border-radius:25px;text-decoration:none;font-weight:700;font-size:1rem">
      Confirm Subscription
    </a>
  </p>
  <p style="font-size:12px;color:#999">If you didn't request this, you can safely ignore this email.</p>
  </div>
</body>
</html>",
  "subject": "Confirm your Big G's Finder subscription",
}
`;

exports[`buildNotifyEmail > matches snapshot 1`] = `
{
  "from": "Big G's Finder <noreply@biggfinder.jelinson.com>",
  "html": "<!DOCTYPE html>
<html>
<body style="font-family:sans-serif;margin:0;padding:0;background:#f4f4f4;color:#3D2817">
  <div style="max-width:600px;margin:40px auto;padding:20px;background:#ffffff;border-radius:8px">
  <h2>🍦 The flavor you're watching just appeared!</h2>
  <ul style="line-height:1.8"><li>South Boulder: Big G&#39;s Cookies &amp; Dream</li><li>Louisville: Big G&#39;s Cookies &amp; Dream</li></ul>
  <p style="margin:30px 0">
    <a href="https://biggfinder.jelinson.com"
       style="background:#FF6B9D;color:white;padding:14px 28px;border-radius:25px;text-decoration:none;font-weight:700;font-size:1rem">
      Check the Tracker
    </a>
  </p>
  <p style="font-size:12px;color:#999"><a href="https://biggfinder.jelinson.com/api/unsubscribe?token=unsub-token" style="color:#999">Unsubscribe</a></p>
  </div>
</body>
</html>",
  "subject": "Big G's Cookies & Dream is available! 🍦",
}
`;
